libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/fn-generics-tuple-literal.jsonc
//@ run: fail
//@ description: fn/4 tuple generics with argument as literal should fail to compile
[
  "::kernel::special_form::fn",
  {
    "#tuple": [
      { "#literal": 1 }
      //~^ ERROR Use a valid generics expression
    ]
  },
  { "#struct": {} },
  "_",
  ["+", "a", "b"]
]
